fix: Windows推拽放大画面异常裁切问题.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,8 @@ chakra = "src"
 
 [tool.setuptools.package-data]
 "chakra.Chakra" = ["*.qml", "qmldir", "fonts/*.ttf"]
+
+[tool.uv.workspace]
+members = [
+    "examples",
+]
